--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/_checkout.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/_checkout.scss
@@ -50,7 +50,7 @@
 		text-align: center;
 	}
 	.opt-info .media-body { 
-		//.muted();
+		color: $text-muted;
 	}
 	.opt-control {
 		padding-right: 100px;
