--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
@@ -78,3 +78,4 @@ $card-border-color:         rgba(0,0,0, 0.12);*/
 @import "_pages.scss";
 @import "_login.scss";
 @import "_rating.scss";
+@import "_product.scss";
