--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/CompareProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/CompareProducts.cshtml
@@ -92,7 +92,7 @@
 								</div>
 								@if (product.BasePriceInfo.HasValue())
 								{
-									<div class="base-price muted">
+									<div class="base-price text-muted">
 										@product.BasePriceInfo
 									</div>
 								}
