--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/RecentlyAddedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/RecentlyAddedProducts.cshtml
@@ -11,7 +11,7 @@
 <div class="page recently-added-products-page">
     <div class="page-title">
         <a href="@Url.RouteUrl("RecentlyAddedProductsRSS")" class="link-rss" title="@T("Products.NewProducts.RSS.Hint")">
-			<i class="fa fa-rss muted"></i>
+			<i class="fa fa-rss text-muted"></i>
 			@T("Products.NewProducts.RSS")
 		</a>
         <h1>@T("Products.NewProducts")</h1>
