--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/_ProductBoxList.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/_ProductBoxList.cshtml
@@ -184,21 +184,21 @@
                 </div>
                 @if (Model.TransportSurcharge.HasValue())
                 {
-                <div class="transport-charge muted">
+                <div class="transport-charge text-muted">
                     @Model.TransportSurcharge
                 </div>
                 }
                 
                 @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(Model.BasePriceInfo))
                 {
-                <div class="base-price muted">
+                <div class="base-price text-muted">
                     @Model.BasePriceInfo
                 </div>
                 }
 
                 @if (Model.ShowLegalInfo)
                 {
-                <div class="legal-info muted">
+                <div class="legal-info text-muted">
                     @Html.Raw(Model.LegalInfo)
                 </div>
                 }
