--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Customer/Orders.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Customer/Orders.cshtml
@@ -150,7 +150,7 @@
             }
             else
             {
-                <span class="muted">
+                <span class="text-muted">
                     @T("Account.CustomerOrders.NoOrders")
                 </span>
             }
