--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/News/NewsItem.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/News/NewsItem.cshtml
@@ -13,7 +13,7 @@
 
 <article class="page news-item-page">
 
-    <div class="news-date muted">
+    <div class="news-date text-muted">
         @Model.CreatedOn.ToString("D")
     </div>
 
