--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/ProductDetailReviews.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/ProductDetailReviews.cshtml
@@ -15,10 +15,10 @@
                         <div style="width: @(ratingPercent)%"></div>
                     </div>
                     <strong>@review.Title</strong>,
-                    <span class="muted"><small>@review.WrittenOnStr</small></span>
+                    <span class="text-muted"><small>@review.WrittenOnStr</small></span>
                 </div>
 
-                <div class="review-author muted">
+                <div class="review-author text-muted">
                     <strong>@T("Reviews.From"):</strong>
                     @if (review.AllowViewingProfiles)
                     {
