--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_ProductBoxCompact.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_ProductBoxCompact.cshtml
@@ -34,7 +34,7 @@
         <div>
             @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(Model.BasePriceInfo))
         {
-                <span class="base-price muted">
+                <span class="base-price text-muted">
                     @Model.BasePriceInfo
                 </span>
             }
