--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/EstimateShipping.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/EstimateShipping.cshtml
@@ -45,7 +45,7 @@
 
             <div class="card-block">
 
-                <div class="hint muted">@T("ShoppingCart.EstimateShipping.Tooltip")</div>
+                <div class="hint text-muted">@T("ShoppingCart.EstimateShipping.Tooltip")</div>
 
                 <div class="shipping-options m-t-2" style="border: 0;">
                     <div class="form-group">
@@ -85,7 +85,7 @@
                                         @Html.Raw(HttpUtility.HtmlDecode(shippingOption.Name))
                                         (@shippingOption.Price)
                                     </div>
-                                    <div class="option-description muted">
+                                    <div class="option-description text-muted">
                                         @Html.Raw(shippingOption.Description)
                                     </div>
                                 </div>
