--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/OrderSummary.cshtml
@@ -14,13 +14,13 @@
 		}
 		@if (Model.ShowSku)
 		{
-			<td class="nobr">
+			<td class="text-nowrap">
 				@item.Sku
 			</td>
 		}
 		@if (Model.ShowProductImages)
 		{
-			<td class="productpicture nobr">
+			<td class="productpicture text-nowrap">
 				@if (item.Picture.ImageUrl.HasValue())
 				{
 					<img class="img-polaroid" alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" style="max-width:@(Model.MediaDimensions)px;max-height:@(Model.MediaDimensions)px"/>
@@ -39,7 +39,7 @@
 
             @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(item.BasePrice))
             {
-                <div class="base-price muted ">
+                <div class="base-price text-muted">
                     @item.BasePrice
                 </div>
             }
@@ -55,7 +55,7 @@
 
 			@if (!String.IsNullOrEmpty(item.AttributeInfo))
 			{
-				<div class="attributes muted">
+				<div class="attributes text-muted">
 					@Html.Raw(item.AttributeInfo)
 				</div>
 			}
@@ -100,14 +100,14 @@
 
         @if (Model.DisplayWeight)
 		{
-        <td class="weight nobr">
+        <td class="weight text-nowrap">
             <span class="product-weight">@((item.Weight * item.Quantity).ToString("N2")) kg</span>
         </td>
         }
-		<td class="unit-price nobr">
+		<td class="unit-price text-nowrap">
 			<span class="product-unit-price">@item.UnitPrice</span>
 		</td>
-		<td class="nobr">
+		<td class="text-nowrap">
 			@if (Model.IsEditable)
 			{
 				if (item.AllowedQuantities.Count > 0)
@@ -121,9 +121,7 @@
 				}
 				else
 				{
-                    <div class="col-sm-8">
-                        <input name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input hide" style="width:100%" />
-                    </div>
+                    <input name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input text-xs-right form-control" />   
 				}
 			}
 			else
@@ -132,7 +130,7 @@
 			}
             <span class="measure-unit">@item.QuantityUnit</span>
 		</td>
-		<td class="nobr omega">
+		<td class="text-nowrap omega">
 			<span class="product-subtotal">@item.SubTotal</span>
 			@if (!String.IsNullOrEmpty(item.Discount))
 			{
@@ -206,13 +204,13 @@
 							}
                             @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(item.BasePrice))
                             {
-                                <div class="base-price muted ">
+                                <div class="base-price text-muted">
                                     @item.BasePrice
                                 </div>
                             }
 							@if (!String.IsNullOrEmpty(item.AttributeInfo))
 							{
-								<div class="bundle-item-attribute-info muted">
+								<div class="bundle-item-attribute-info text-muted">
 									@Html.Raw(item.AttributeInfo)
 								</div>
 							}
@@ -228,10 +226,10 @@
 						</div>
 					</div>
 				</td>
-				<td class="unit-price nobr">
+				<td class="unit-price text-nowrap">
 					@if (!String.IsNullOrWhiteSpace(item.BundleItem.PriceWithDiscount))
 					{
-						<span class="muted">
+						<span class="text-muted">
 							@Html.Raw(item.BundleItem.PriceWithDiscount)
 						</span>
 					}
@@ -240,10 +238,10 @@
 						<text>&nbsp;</text>
 					}
 				</td>
-				<td class="nobr">
+				<td class="text-nowrap">
 					&nbsp;
 				</td>
-				<td class="nobr text-success omega">
+				<td class="text-nowrap text-success omega">
 					&nbsp;
 				</td>
 			</tr>
