--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/_OrderReviewData.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/ShoppingCart/_OrderReviewData.cshtml
@@ -176,7 +176,7 @@
                         @Model.PaymentMethod
 						@if (Model.PaymentSummary.HasValue())
 						{
-							<span class="muted">@Model.PaymentSummary</span>
+							<span class="text-muted">@Model.PaymentSummary</span>
 						}
                     </div>
                 </div>
