--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Blog/BlogPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Blog/BlogPost.cshtml
@@ -18,7 +18,7 @@
 
 <article class="page blogpost-page">
     
-    <div class="blogpost-date muted">
+    <div class="blogpost-date text-muted">
         @Model.CreatedOn.ToString("D")
     </div>
 
