--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Boards/LastPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Boards/LastPost.cshtml
@@ -8,7 +8,7 @@
 
 @if (@Model.Id > 0)
 {
-    <div class="last-post muted">
+    <div class="last-post text-muted">
         <div class="createdon">@Model.PostCreatedOnStr</div>
         @if (Model.ShowTopic)
         {
