--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/Reviews.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/Reviews.cshtml
@@ -8,7 +8,7 @@
     Html.AddTitleParts(T("PageTitle.ProductReviews").Text);
 }
 <div class="page product-reviews-page">
-    <h4 class="muted">@T("Reviews.ProductReviewsFor")</h4>
+    <h4 class="text-muted">@T("Reviews.ProductReviewsFor")</h4>
     <div class="page-title">
         <h1 class="text-xs-left">
 			<a href="@Url.RouteUrl("Product", new { SeName = Model.ProductSeName })" style="text-decoration: none;">@Model.ProductName</a>
@@ -102,10 +102,10 @@
                                         <div style="width: @(ratingPercent)%"></div>
                                     </div>
                                     <strong>@review.Title</strong>,
-                                    <span class="muted"><small>@review.WrittenOnStr</small></span>
+                                    <span class="text-muted"><small>@review.WrittenOnStr</small></span>
                                 </div>
 
-                                <div class="review-author muted">
+                                <div class="review-author text-muted">
                                     <strong>@T("Reviews.From"):</strong>
                                     @if (review.AllowViewingProfiles)
                                     {
