--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/_ReviewHelpfulness.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Product/_ReviewHelpfulness.cshtml
@@ -5,7 +5,7 @@
     Html.AddScriptParts("~/Scripts/public.reviews.js");
 }
 
-<div class="product-review-vote muted" data-review-id="@(Model.ProductReviewId)" data-href='@(Url.Action("SetReviewHelpfulness"))'>
+<div class="product-review-vote text-muted" data-review-id="@(Model.ProductReviewId)" data-href='@(Url.Action("SetReviewHelpfulness"))'>
     <span>@T("Reviews.Helpfulness.WasHelpful?")</span>
     <a class="vote vote-yes" href="#" title="@T("Common.Yes")" rel="tooltip nofollow">
         <i class="fa fa-thumbs-up"></i>
