--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_CreateOrUpdateAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Shared/_CreateOrUpdateAddress.cshtml
@@ -185,7 +185,7 @@
     }
 
     <div class="form-group row">
-        <div class="col-sm-push-3 col-sm-9 muted address-required-hint">
+        <div class="col-sm-push-3 col-sm-9 text-muted address-required-hint">
             @T("Address.Fields.Required.Hint")
         </div>
     </div>
