Resolves #724 Allow discounts to be applied to manufacturers

--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/_CreateOrUpdate.cshtml
@@ -9,6 +9,7 @@
     x.Add().Text(T("Admin.Catalog.Manufacturers.Info").Text).Content(TabInfo()).Selected(true);
     x.Add().Text(T("Admin.Common.SEO").Text).Content(TabSeo());
     x.Add().Text(T("Admin.Catalog.Manufacturers.Products").Text).Content(TabProducts());
+	x.Add().Text(T("Admin.Promotions.Discounts").Text).Content(TabDiscounts());
 	x.Add().Text(T("Admin.Common.Stores").Text).Content(TabStores());
     
     //generate an event
@@ -334,6 +335,26 @@
     {
             @T("Admin.Catalog.Manufacturers.Products.SaveBeforeEdit")
     }
+}
+
+@helper TabDiscounts()
+{
+	if (Model.AvailableDiscounts != null && Model.AvailableDiscounts.Any())
+	{
+		foreach (var discount in Model.AvailableDiscounts)
+		{
+			<label class="checkbox">
+				<input type="checkbox" name="SelectedDiscountIds" value="@discount.Id"
+					   @if (Model.SelectedDiscountIds != null && Model.SelectedDiscountIds.Contains(discount.Id)) { <text> checked="checked" </text>  } />@discount.Name
+				</label>
+		}
+	}
+	else
+	{
+		<div class="alert alert-info">
+			@T("Admin.Promotions.Discounts.NoDiscountsAvailable")
+		</div>
+	}
 }
 
 @helper TabStores()
