--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -457,7 +457,7 @@
 	else
 	{
 		<div class="alert alert-info">
-			@T("Admin.Catalog.Categories.Discounts.NoDiscounts")
+			@T("Admin.Promotions.Discounts.NoDiscountsAvailable")
 		</div>
 	}
 }
